--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -32,21 +32,87 @@
         <th>contents</th>
         <td th:text="${board.boardContents}"></td>
     </tr>
+    <tr th:if="${board.fileAttached == 1}">
+        <th>image</th>
+        <td th:each="fileName : ${board.storedFileName}">
+            <img th:src="@{|/upload/${fileName}|}" alt=""></td>
+    </tr>
 </table>
 <button onclick="listReq()">목록</button>
 <button onclick="updateReq()">수정</button>
 <button onclick="deleteReq()">삭제</button>
 
-<!-- 댓글 작성 부분 -->
 <div id="comment-write">
     <input type="text" id="commentWriter" placeholder="작성자">
     <input type="text" id="commentContents" placeholder="내용">
     <button id="comment-write-btn" onclick="commentWrite()">댓글작성</button>
 </div>
+
+<div id="comment-list">
+    <table>
+        <tr>
+        <th>댓글번호</th>
+        <th>작성자</th>
+        <th>댓글번호</th>
+        <th>작성시간</th>
+        </tr>
+    <tr th:each="comment: ${commentList}" >
+        <td th:text="${comment.id}"></td>
+        <td th:text="${comment.commentWriter}"></td>
+        <td th:text="${comment.commentContents}"></td>
+        <td th:text="${comment.commentCreatedTime}"></td> <br>
+    </tr>
+    </table>
+</div>
+<!-- 댓글 작성 부분 -->
+
 <script th:inline="javascript">
+    const commentWrite = () => {
+        const writer = document.getElementById("commentWriter").value;
+        const contents = document.getElementById("commentContents").value;
+        console.log("작성자:" , writer);
+        console.log("내용:" , contents);
+        const id = [[${board.id}]]; // 게시글 번호
+
+        $.ajax({
+            // 요청방식 : post , 요청주소 : /comment/save, 요청데이터: 작성자 , 작성내용
+            type : "post",
+            url : "/comment/save",
+            data : {
+                "commentWriter" : writer,
+                "commentContents" : contents,
+                "boardId" : id
+            } ,
+            success: function (res) {
+                console.log("요청성공", res);
+                let output = "<table>";
+                output += "<tr><th>댓글번호</th>";
+                output += "<th>작성자</th>";
+                output += "<th>내용</th>";
+                output += "<th>작성시간</th></tr>";
+                for (let i in res) {
+                    output += "<tr>";
+                    output += "<td>" + res[i].id + "</td>";
+                    output += "<td>" + res[i].commentWriter + "</td>";
+                    output += "<td>" + res[i].commentContents + "</td>";
+                    output += "<td>" + res[i].commentCreatedTime + "</td>";
+                    output += "</tr>";
+                }
+                output += "</table>";
+                document.getElementById('comment-list').innerHTML = output;
+                document.getElementById('commentWriter').value = '';
+                document.getElementById('commentContents').value = '';
+            },
+            error: function (err) {
+                console.log("요청실패", err);
+            }
+        });
+    }
+
     const listReq = () => {
         console.log("목록 요청");
-        location.href = "/board/";
+        const page = [[${page}]];
+        location.href = "/board/paging?page=" + page;
     }
     const updateReq = () => {
         console.log("수정 요청");
@@ -57,7 +123,7 @@
     const deleteReq = () => {
         console.log("삭제 요청")
         const id  = [[${board.id}]];
-        location.href= "/board/delete/ " + id
+        location.href= "/board/delete/" + id
 
     }
 </script>
